--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,3 +26,7 @@
 .loading-symbol {
   @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl text-black;
 }
+
+.logo-desktop {
+  @apply rounded-full border-2 border-[var(--primary-color)] w-20 h-20;
+}
