--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,6 +23,9 @@
   --Font-2: 'Sen', sans-serif;
 }
 
+.search-bar-layout {
+  @apply flex flex-row items-center justify-center gap-2;
+}
 .loading-symbol {
   @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl text-black;
 }
