--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,10 @@
 .search-bar-layout {
   @apply flex flex-row items-center justify-center gap-2;
 }
+
+.search-input {
+  @apply border-2 border-[var(--primary-color)] rounded-lg p-2 pl-8 pr-32;
+}
 .loading-symbol {
   @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl text-black;
 }
