--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,6 +34,18 @@
   font-size: var(--H1-Mobile-font-size);
   font-family: var(--Font-1);
 }
+
+.h2-desktop {
+  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
+  font-size: var(--H2-Desktop-font-size);
+  font-family: var(--Font-1);
+}
+
+.h2-mobile {
+  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
+  font-size: var(--H2-Mobile-font-size);
+  font-family: var(--Font-1);
+}
 .button-styles {
   @apply bg-[var(--primary-color)] text-[var(--secondary-color)] font-[var(--Font-2)] rounded-lg hover:shadow-[0_4px_6px_rgba(255,255,255,0.5)];
 }
