--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,26 +24,26 @@
 }
 
 .h1-desktop {
-  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
   font-size: var(--H1-Desktop-font-size);
+  color: var(--secondary-color);
   font-family: var(--Font-1);
 }
 
 .h1-mobile {
-  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
   font-size: var(--H1-Mobile-font-size);
+  color: var(--secondary-color);
   font-family: var(--Font-1);
 }
 
 .h2-desktop {
-  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
   font-size: var(--H2-Desktop-font-size);
+  color: var(--secondary-color);
   font-family: var(--Font-1);
 }
 
 .h2-mobile {
-  @apply text-[var(--secondary-color)] font-[var(--Font-1)];
   font-size: var(--H2-Mobile-font-size);
+  color: var(--secondary-color);
   font-family: var(--Font-1);
 }
 .button-styles {
