--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -149,7 +149,19 @@
 .carouselItem {
   @apply flex flex-row min-w-full box-border;
 }
-
+@layer utilities {
+  .z-12 {
+    z-index: 12;
+  }
+}
 .carousel-control {
-  cursor: pointer;
+  @apply absolute top-1/2 transform -translate-y-1/2 border-none cursor-pointer z-12;
+}
+
+.carousel-control.prev {
+  left: 0;
+}
+
+.carousel-control.next {
+  right: 0;
 }
