--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -126,8 +126,12 @@
   @apply flex flex-row items-center justify-center;
 }
 
+.inner-container-styles {
+  @apply flex flex-col items-center  justify-center gap-2  rounded-lg;
+}
+
 .listing-container-styles {
-  @apply flex flex-col items-center  justify-center gap-2;
+  @apply flex flex-row items-center border-2 border-[var(--primary-color)] rounded-lg w-[20rem];
 }
 
 .listing-image-styles {
@@ -139,15 +143,15 @@
 }
 
 .carousel {
-  @apply flex w-full max-w-[600px] mx-auto relative overflow-hidden;
+  @apply flex overflow-hidden relative w-10;
 }
 
 .carouselInner {
-  @apply flex transition-transform duration-500 ease-in-out overflow-x-hidden;
+  @apply flex flex-row transition-transform duration-300 ease-in-out;
 }
 
 .imageContainer {
-  @apply flex flex-row min-w-full box-border;
+  @apply flex flex-row  overflow-x-hidden w-[10rem] md:w-[20rem] rounded-lg border-2 border-[var(--primary-color)];
 }
 @layer utilities {
   .z-12 {
