--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -126,12 +126,12 @@
   @apply flex flex-row items-center justify-center;
 }
 
-.inner-container-styles {
-  @apply flex flex-col items-center  justify-center gap-2  rounded-lg;
+.listing-container-styles {
+  @apply flex flex-col items-center  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
 }
 
-.listing-container-styles {
-  @apply flex flex-row items-center border-2 border-[var(--primary-color)] rounded-lg w-[20rem];
+.inner-container-styles {
+  @apply flex flex-row items-center justify-center  rounded-lg;
 }
 
 .listing-image-styles {
@@ -143,7 +143,7 @@
 }
 
 .carousel {
-  @apply flex overflow-hidden relative w-10;
+  @apply flex justify-between align-middle overflow-hidden relative w-10;
 }
 
 .carouselInner {
@@ -151,21 +151,21 @@
 }
 
 .imageContainer {
-  @apply flex flex-row  overflow-x-hidden w-[10rem] md:w-[20rem] rounded-lg border-2 border-[var(--primary-color)];
+  @apply flex  items-center overflow-x-hidden w-[10rem] md:w-[20rem] rounded-lg border-2 border-[var(--primary-color)];
+}
+
+.carousel-container {
+  @apply flex justify-between items-center relative;
 }
 @layer utilities {
   .z-12 {
     z-index: 12;
   }
 }
-.carousel-control {
-  @apply absolute top-1/2 transform -translate-y-1/2 border-none cursor-pointer z-12;
+.carousel-control-left {
+  @apply absolute left-24;
 }
 
-.carousel-control.prev {
-  left: 0;
-}
-
-.carousel-control.next {
-  right: 0;
+.carousel-control-right {
+  @apply absolute right-24;
 }
