--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -193,3 +193,7 @@
 .place-bid-input-styles {
   @apply border-2 border-[var(--primary-color)] rounded-lg w-[204px] h-[51px];
 }
+
+.view-bids-box {
+  @apply flex flex-col items-center justify-center gap-2 w-[200px] h-[auto] border-2 border-[#e4b022] rounded-lg;
+}
