--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -100,7 +100,7 @@
 }
 
 .sidebar-styles {
-  @apply flex flex-col items-center justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
+  @apply flex flex-col items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
 }
 
 .sidebar-height-when-closed {
