--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,13 +32,7 @@
 .h1-styles {
   color: var(--secondary-color);
   font-size: var(--H1-Mobile-font-size);
-  @apply font-custom;
-}
-
-.h2-desktop {
-  color: var(--secondary-color);
-  font-size: var(--H2-Desktop-font-size);
-  @apply font-custom;
+  @apply font-custom md:text-3xl;
 }
 
 .body-text-desktop {
@@ -53,22 +47,16 @@
   @apply font-custom2;
 }
 
-.labels-desktop {
-  color: var(--secondary-color);
-  font-size: var(--Labels-and-footer-desktop-font-size);
-  @apply font-custom;
-}
-
-.labels-mobile {
+.labels {
   color: var(--secondary-color);
   font-size: var(--Labels-and-footer-mobile-font-size);
-  @apply font-custom;
+  @apply font-custom md:text-base;
 }
 
-.h2-mobile {
+.h2-styles {
   color: var(--secondary-color);
   font-size: var(--H2-Mobile-font-size);
-  @apply font-custom;
+  @apply font-custom md:text-[25px];
 }
 .button-styles {
   @apply bg-primary text-secondary font-custom2 rounded-lg hover:shadow-custom active:shadow-custom2 text-base md:text-sm;
@@ -229,7 +217,7 @@
 }
 
 .image-container-individual-listing {
-  @apply grid grid-cols-2 md:grid-cols-3 w-[80%] h-[auto] rounded-lg border-2 border-[var(--primary-color)];
+  @apply grid grid-cols-2 md:grid w-[80%] h-[auto] rounded-lg border-2 border-[var(--primary-color)];
 }
 
 .listing-container-individual-listing {
