--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -221,7 +221,7 @@
 }
 
 .view-bids-box {
-  @apply flex flex-col items-center justify-center gap-2 w-[200px] h-[auto] border-2 border-[#e4b022] rounded-lg;
+  @apply flex flex-col fixed z-12 mr-[200px] bg-[var(--tertiary-color)] items-center justify-center gap-2 w-[200px] h-[auto] border-2 border-[#e4b022] rounded-lg;
 }
 
 .footer {
