--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,7 +77,7 @@
 }
 
 .search-bar-layout {
-  @apply flex flex-row items-center justify-center gap-2;
+  @apply flex flex-row items-center justify-end ml-6 md:ml-0 gap-2;
 }
 
 .search-input {
@@ -241,11 +241,11 @@
 }
 
 .image-container-individual-listing {
-  @apply grid grid-cols-2 md:grid w-[360px] md:grid-cols-3 md:w-[730px] h-[auto] rounded-lg border-2 border-[var(--primary-color)];
+  @apply grid grid-cols-2 md:grid w-[300px] md:grid-cols-3 md:w-[730px] h-[auto] rounded-lg border-2 border-[var(--primary-color)];
 }
 
 .listing-container-individual-listing {
-  @apply flex flex-col items-center justify-center;
+  @apply flex flex-col  items-center justify-center;
 }
 
 .listing-images-individual-listing {
