--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,7 +33,7 @@
 }
 
 .two-column-layout {
-  @apply grid grid-cols-2 gap-4;
+  @apply grid grid-cols-2  items-center justify-center;
 }
 
 .h1-styles {
