--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -160,7 +160,7 @@
 }
 
 .listing-container-styles {
-  @apply flex flex-col md:flex-row items-center w-[300px] h-[auto] md:w-[380px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
+  @apply flex flex-col md:flex-row items-center w-[300px] h-[500px] md:w-[380px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
 }
 
 .inner-container-styles {
