--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -163,6 +163,10 @@
   @apply flex flex-col md:flex-row items-center w-[300px] h-[500px] md:w-[380px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
 }
 
+.listing-container-my-bids {
+  @apply flex flex-col md:flex-row items-center w-[300px] h-[400px] md:w-[380px] md:h-[400px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
+}
+
 .inner-container-styles {
   @apply flex flex-row  items-center justify-center  rounded-lg;
 }
@@ -187,6 +191,9 @@
   @apply flex items-center relative overflow-x-hidden w-[10rem] md:w-[20rem] rounded-lg border-2 border-[var(--primary-color)];
 }
 
+.imageContainerMyBids {
+  @apply flex items-center relative overflow-x-hidden w-[10rem] md:w-[15rem] rounded-lg border-2 border-[var(--primary-color)];
+}
 .carousel-container {
   @apply flex justify-between items-center relative;
 }
