--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,7 +73,7 @@
 }
 .button-styles {
   font-size: var(--Button-and-Input-mobile-font-size);
-  @apply bg-primary font-extrabold text-secondary font-custom2 rounded-lg hover:shadow-custom active:shadow-custom2  md:text-sm;
+  @apply bg-primary font-extrabold text-tertiary font-custom2 rounded-lg hover:shadow-custom active:shadow-custom2  md:text-sm;
 }
 
 .close-button-auth {
@@ -264,7 +264,7 @@
 
 .footer {
   font-family: var(--Font-2);
-  @apply grid grid-cols-2 mt-2 w-[100%] h-[80px] bg-[var(--primary-color)] text-[16px] md:text-base text-[var(--secondary-color)]  font-bold;
+  @apply grid grid-cols-2 mt-2 w-[100%] h-[80px] bg-[var(--primary-color)] text-[16px] md:text-base text-[var(--tertiary-color)]  font-bold;
 }
 
 .social-media-icons {
