--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,6 +130,10 @@
   }
 }
 
+.header-styles {
+  @apply w-full pt-6 flex flex-col h-56 fixed bg-black z-10;
+}
+
 .sidebar-styles {
   @apply flex flex-row items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] ;
 }
@@ -321,12 +325,17 @@
 }
 
 
+
 @media (max-width:767px){
   .sidebar-styles{
  @apply flex flex-col items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;}
 
  .hamburger{
   display: block;
+}
+
+.header-styles{
+  @apply flex flex-row
 }
 
 }
