--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -139,19 +139,21 @@
 }
 
 .header-styles {
-  @apply w-full pt-6 flex flex-col h-56 fixed bg-black z-10;
+  @apply w-full pt-6 flex flex-col h-72 fixed bg-black z-10 border-2 border-[var(--primary-color)];
 }
 
 .sidebar-styles {
-  @apply flex flex-row items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] ;
+  @apply flex flex-row items-center z-12 justify-center bg-black gap-4  ;
 }
 .hamburger{
   display: none;
 }
 
 .nav-menu{
-  @apply flex flex-row
+  @apply flex flex-row gap-4;
 }
+
+
 
 .sidebar-height-when-closed {
   @apply max-h-[100px] top-0 bottom-0 pt-0;
@@ -343,7 +345,7 @@
 
 @media (max-width:767px){
   .sidebar-styles{
- @apply flex flex-col items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;}
+ @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;}
 
  .hamburger{
   display: block;
@@ -362,7 +364,7 @@ transition: opacity 0.3s ease-in-out;
 }
 
 .header-styles{
-  @apply flex flex-row;
+  @apply flex flex-row h-52;
 }
 
 .mobile-select {
