removed margin from search bar layout

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -85,7 +85,7 @@
 }
 
 .search-bar-layout {
-  @apply flex flex-row items-center justify-end ml-6 md:ml-0 gap-2;
+  @apply flex flex-row items-center justify-end  gap-2;
 }
 
 .desktop-select{
